# rail-agui

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  DEBUG_CHECKLIST.md  ISSUE_DESCRIPTION_EDIT_FEATURE.md  README.md  TEST_GUIDE.md  TEST_PROMPTS.md  TEST_SCENARIOS.md  package.json  pnpm-lock.yaml  test_agent_prompts.py  test_results.json
apps/agent/: .gitignore  build_db.py  fleet.db  fleet.db-shm  fleet.db-wal  main.py  package.json  pyproject.toml
apps/agent/src/: rail_data.py  state.py
apps/app/: next.config.ts  package.json
apps/app/scripts/: generate-rail-data.mjs
apps/app/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/app/src/app/api/action-plans/: route.ts
apps/app/src/app/api/copilotkit/: route.ts
apps/app/src/app/api/fleet/: route.ts
apps/app/src/app/api/rail-chat/: route.ts
apps/app/src/app/chat/: page.tsx
apps/app/src/app/rail-dashboard/: page.jsx
apps/app/src/components/: tool-rendering.tsx
apps/app/src/components/dashboard-shell/: index.tsx  mode-toggle.tsx
apps/app/src/components/example-layout/: index.tsx
apps/app/src/components/ui/: status-indicator.tsx  tool-card.tsx
apps/app/src/features/rail-dashboard/: RailDashboardApp.jsx  RailDashboardApp.tsx
apps/app/src/hooks/: index.ts  use-chat-history-guard.tsx  use-example-suggestions.tsx  use-generative-ui-examples.tsx  use-rail-chat-suggestions.tsx  use-rail-dashboard-ai-controls.jsx  use-rail-dashboard-ai-controls.tsx  use-rail-dashboard-context.tsx  use-rail-tool-rendering.tsx
apps/app/src/utils/: use-mobile-chat.ts  use-mobile-view.ts
(+32 files in other folders)
