[project]
name = "sample-agent"
version = "0.1.0"
description = "A LangGraph agent"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langgraph",
    "langsmith",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "langgraph-cli>=0.4.11",
    "langchain-google-genai>=2.0.10",
    "copilotkit==0.1.78",
    "langgraph-api>=0.7.70",
    "python-dotenv>=1.0.1",
    "pip>=26.0.1",
]
