[project]
name = "rail-ops-agent"
version = "0.1.0"
description = "LangGraph agent for rail operations dashboard"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.2.0",
    "langgraph==1.0.5",
    "langsmith>=0.4.49",
    "fastapi>=0.115.5,<1.0.0",
    "uvicorn>=0.29.0,<1.0.0",
    "langgraph-cli[inmem]>=0.4.11",
    "langchain-google-genai>=2.0.10",
    "copilotkit==0.1.78",
    "langgraph-api>=0.7.70",
]
